--- a/package.json
+++ b/package.json
@@ -6,23 +6,32 @@
   "scripts": {
     "start": "ts-node src/server.ts",
     "format": "prettier --write .",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "db:push": "drizzle-kit push",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate"
   },
   "author": "CCXLV",
   "license": "MIT",
   "devDependencies": {
     "@eslint/js": "^9.28.0",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/express": "^5.0.2",
+    "drizzle-kit": "^0.31.1",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.1",
     "globals": "^16.2.0",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.4",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.33.1"
   },
   "dependencies": {
+    "better-sqlite3": "^11.10.0",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.44.1",
     "express": "^5.1.0"
   }
 }
