--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,12 @@
     "strictNullChecks": true,
     "strictFunctionTypes": true,
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
