Start integrating LottieSync (#4)
* Update tsconfig.json

* Update some things

* Start integrating LottieSync files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,22 @@
 {
   "compilerOptions": {
     "target": "es2024",
-    "module": "es2022",
-    "moduleResolution": "bundler",
+    "module": "commonjs",
+    "moduleResolution": "node",
     "baseUrl": "./",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "strictNullChecks": true,
-    "strictFunctionTypes": true
+    "strictFunctionTypes": true,
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
+  "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
