--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "ts-node -r tsconfig-paths/register src/server.ts",
+    "start": "ts-node src/bootstrap.ts",
     "format": "prettier --write .",
     "lint": "eslint .",
     "db:push": "drizzle-kit push",
