--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@eslint/js": "^9.28.0",
     "@types/better-sqlite3": "^7.6.13",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.2",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9.28.0",
@@ -31,6 +32,7 @@
   },
   "dependencies": {
     "better-sqlite3": "^11.10.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.1",
     "express": "^5.1.0",
