--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint .",
     "db:push": "drizzle-kit push",
     "db:generate": "drizzle-kit generate",
-    "empty-tables": "tsx scripts/empty-tables.ts"
+    "empty-tables": "tsx scripts/empty-tables.ts",
+    "reset-elims": "tsx scripts/reset-elims.ts"
   },
   "author": "CCXLV",
   "license": "MIT",
