--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "ts-node src/bootstrap.ts",
+    "start": "ts-node src/server.ts",
+    "build": "tsc",
+    "prod": "node dist/server.js",
     "format": "prettier --write .",
     "lint": "eslint .",
     "db:push": "drizzle-kit push",
@@ -27,7 +29,6 @@
     "globals": "^16.2.0",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.33.1"
