--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,9 +1,25 @@
 services:
-  pubgm-hud-api:
+  api:
     build:
       context: ..
       dockerfile: docker/Dockerfile
     container_name: pubgm-hud-api
     restart: unless-stopped
+    env_file:
+      - ../.env
     ports:
       - 3011:3011
+    volumes:
+      - ../.env:/pubgm-hud/.env
+
+  frontend:
+    build:
+      context: ..
+      dockerfile: docker/frontend.Dockerfile
+    container_name: pubgm-hud-frontend
+    restart: unless-stopped
+    ports:
+      - 80:80
+      - 443:443
+    depends_on:
+      - api
