Final docker updates

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -14,7 +14,7 @@ http {
         listen [::]:80;
         server_name $DOMAIN;
 
-        root /var/www/$DOMAIN/html;
+        root /var/www/html;
         index index.html;
 
         location / {
@@ -38,7 +38,7 @@ http {
     #     ssl_certificate /etc/letsencrypt/live/$DOMAIN/fullchain.pem;
     #     ssl_certificate_key /etc/letsencrypt/live/$DOMAIN/privkey.pem;
 
-    #     root /var/www/$DOMAIN/html;
+    #     root /var/www/html;
     #     index index.html;
 
     #     location / {
