--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,14 +1,4 @@
-events {
-    worker_connections 1024;
-}
-
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-
-    sendfile        on;
-    keepalive_timeout  65;
-
     server {
         listen 80;
         listen [::]:80;
@@ -20,8 +10,14 @@ http {
         location / {
             try_files $uri $uri/ /index.html;
         }
+    }
 
-        location /api {
+    server {
+        listen 80;
+        listen [::]:80;
+        server_name api.$DOMAIN;
+
+        location / {
             proxy_pass http://localhost:3011;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -30,27 +26,36 @@ http {
         }
     }
 
-    # server {
-    #     listen 443 ssl;
-    #     listen [::]:443 ssl;
-    #     server_name $DOMAIN;
+    server {
+        listen 443 ssl;
+        listen [::]:443 ssl;
+        server_name $DOMAIN;
 
-    #     ssl_certificate /etc/letsencrypt/live/$DOMAIN/fullchain.pem;
-    #     ssl_certificate_key /etc/letsencrypt/live/$DOMAIN/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/$DOMAIN/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/$DOMAIN/privkey.pem;
 
-    #     root /var/www/html;
-    #     index index.html;
+        root /var/www/html;
+        index index.html;
 
-    #     location / {
-    #         try_files $uri $uri/ /index.html;
-    #     }
+        location / {
+            try_files $uri $uri/ /index.html;
+        }
+    }
 
-    #     location /api {
-    #         proxy_pass http://localhost:3011;
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    #     }
-    # }
+    server {
+        listen 443 ssl;
+        listen [::]:443 ssl;
+        server_name api.$DOMAIN;
+
+        ssl_certificate /etc/letsencrypt/live/$DOMAIN/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/$DOMAIN/privkey.pem;
+
+        location / {
+            proxy_pass http://localhost:3011;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
 }
