Add default nginx MIME types

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -3,6 +3,10 @@ events {
 }
 
 http {
+    # Include default nginx MIME types
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
     server {
         listen 80;
         listen [::]:80;
