--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -27,5 +27,6 @@ services:
       - api
     volumes:
       - ../.env:/pubgm-hud/.env
+      - /etc/letsencrypt:/etc/letsencrypt:ro
     environment:
       - DOMAIN=${DOMAIN:-localhost}
