Update docker-compose.yml and docker-entrypoint.sh

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -27,6 +27,6 @@ services:
       - api
     volumes:
       - ../.env:/pubgm-hud/.env
-      - /etc/letsencrypt:/etc/letsencrypt:ro
+      - /etc/letsencrypt:/etc/letsencrypt
     environment:
       - DOMAIN=${DOMAIN:-localhost}
