Update nginx.conf tempalte

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -3,7 +3,6 @@ events {
 }
 
 http {
-    # Include default nginx MIME types
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
@@ -18,15 +17,9 @@ http {
         location / {
             try_files $uri $uri/ /index.html;
         }
-    }
 
-    server {
-        listen 80;
-        listen [::]:80;
-        server_name api.$DOMAIN;
-
-        location / {
-            proxy_pass http://localhost:3011;
+        location /api {
+            proxy_pass http://api:3011;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -48,18 +41,9 @@ http {
         location / {
             try_files $uri $uri/ /index.html;
         }
-    }
 
-    server {
-        listen 443 ssl;
-        listen [::]:443 ssl;
-        server_name api.$DOMAIN;
-
-        ssl_certificate /etc/letsencrypt/live/$DOMAIN/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/$DOMAIN/privkey.pem;
-
-        location / {
-            proxy_pass http://localhost:3011;
+        location /api {
+            proxy_pass http://api:3011;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
