--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - 3011:3011
     volumes:
       - ../.env:/pubgm-hud/.env
+      - ../drizzle.config.ts:/pubgm-hud/drizzle.config.ts
 
   frontend:
     build:
