--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -25,6 +25,15 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
+
+        location /api/socket.io/ {
+            proxy_pass http://api:3011/socket.io/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
     }
 
     server {
@@ -42,12 +51,21 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
-        location /api {
-            proxy_pass http://api:3011;
+        location /api/ {
+            proxy_pass http://api:3011/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /api/socket.io/ {
+            proxy_pass http://api:3011/socket.io/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
         }
     }
 }
