--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -26,11 +26,11 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /api/socket.io/ {
+        location /socket.io/ {
             proxy_pass http://api:3011/socket.io/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
+            proxy_set_header Connection "Upgrade";
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
@@ -59,11 +59,11 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /api/socket.io/ {
+        location /socket.io/ {
             proxy_pass http://api:3011/socket.io/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
+            proxy_set_header Connection "Upgrade";
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
