--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,11 @@ NODE_ENV=development
 ACCESS_KEY=
 
 PORT=3011
+HOST=http://localhost:3011
 ALLOWED_ORIGINS=
-FRONTEND_URL=localhost:5173
+FRONTEND_URL=http://localhost:5173
 
 DB_FILE_NAME=database.db
 
 DOMAIN=localhost
+EMAIL=
