--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,4 +1,12 @@
+events {
+    worker_connections 1024;
+}
+
 http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+    client_max_body_size 100M;
+
     server {
         listen 80;
         listen [::]:80;
@@ -10,19 +18,22 @@ http {
         location / {
             try_files $uri $uri/ /index.html;
         }
-    }
 
-    server {
-        listen 80;
-        listen [::]:80;
-        server_name api.$DOMAIN;
-
-        location / {
-            proxy_pass http://localhost:3011;
+        location /api/ {
+            proxy_pass http://api:3011/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /socket.io/ {
+            proxy_pass http://api:3011/socket.io/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
         }
     }
 
@@ -40,22 +51,22 @@ http {
         location / {
             try_files $uri $uri/ /index.html;
         }
-    }
 
-    server {
-        listen 443 ssl;
-        listen [::]:443 ssl;
-        server_name api.$DOMAIN;
-
-        ssl_certificate /etc/letsencrypt/live/$DOMAIN/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/$DOMAIN/privkey.pem;
-
-        location / {
-            proxy_pass http://localhost:3011;
+        location /api/ {
+            proxy_pass http://api:3011/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /socket.io/ {
+            proxy_pass http://api:3011/socket.io/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
         }
     }
 }
